# lidar-perception-models

./: .gitignore  CMakeLists.txt  README.md
cmake/: Boost.cmake  PCL.cmake  Protobuf.cmake
common/: CMakeLists.txt  box2d.h  box2d_test.cpp  file_util.h  protobuf_util.h  random.h  string_util.h
lidar/: CMakeLists.txt
lidar/cnn_segmentation/: cnnseg_model.py  dataset.py  model_convert.py  model_convert_nhwc.py  tfrecord_util.py
lidar/cnn_segmentation/test/: common_util_test.py  model_convert_test.py
lidar/cnn_segmentation/test/test_data/model_convert/: pred_examples  train_examples
lidar/cnn_segmentation/tools/: CMakeLists.txt
lidar/cnn_segmentation/tools/cmake/: Boost.cmake  GFlags.cmake  GTest.cmake  Gears.cmake  PCL.cmake
lidar/cnn_segmentation/tools/scripts/: label_debug_tool.py  label_generate_tool.py  label_rawdata_parse_tool.py
lidar/cnn_segmentation/tools/src/: CMakeLists.txt
lidar/cnn_segmentation/tools/src/common/: file_util.h  label.cpp  string_util.h
lidar/cnn_segmentation/tools/src/data_augmentation/: flags.h
lidar/cnn_segmentation/tools/src/data_augmentation/transform/: down_sample_transform.h  ground_filter_transform.h  move_transform.cpp  obstacle_transform.h  reflect_y_transform.cpp  rotate_z_transform.cpp  transform.h
lidar/cnn_segmentation/tools/src/visualization/: flags.h  visualize.cpp
lidar/cnnseg/: CMakeLists.txt
lidar/cnnseg/scripts/: cnnseg_model.py  common_util.py  config.py  dataset.py  model_run.py
lidar/cnnseg/scripts/label_generate/: label_debug_tool.py  label_generate_tool.py
lidar/cnnseg/scripts/test/: dataset_test.py  mock_model.py  tfrecord_load_test.py  tfrecord_util_test.py
lidar/cnnseg/scripts/test/test_data/feature/: 1.txt
lidar/cnnseg/scripts/test/test_data/label/: 1.txt
lidar/cnnseg/src/: CMakeLists.txt
lidar/common/: example.h  label.cpp  pcl_defs.h
lidar/pointpillars/: CMakeLists.txt
lidar/pointpillars/config/: pp_config.pb.txt
lidar/pointpillars/proto/: CMakeLists.txt  pp_config.proto  pp_example.proto
lidar/pointpillars/scripts/: box_ops.py  dataset.py  loss.py  model_run.py  model_util.py  optimizer.py  pointpillars.py
lidar/pointpillars/scripts/test/: box_ops_test.py  dataset_test.py  loss_test.py  model_test.py  run_all_test.sh
lidar/pointpillars/scripts/test/test_data/: example_infos.txt  test_config.pb.txt  test_example.pb.txt
lidar/pointpillars/src/: CMakeLists.txt  pp_example_gen.cpp
lidar/pointpillars/src/preprocess/: flags.h  pp_example_gen.cpp  preprocessor.cpp  preprocessor.h  target_assigner.cpp  target_assigner.h  voxel_generator.cpp  voxel_generator.h  voxel_mapping.cpp  voxel_mapping.h
lidar/pointpillars/test/: CMakeLists.txt  target_assigner_test.cpp  test_example_gen.cpp  test_utils.h  voxel_generator_test.cpp  voxel_mapping_test.cpp
lidar/pointpillars/test/test_base/: test_config.pb.txt  test_label.txt  test_point_cloud1.txt  test_point_cloud2.txt  test_point_cloud3.txt
lidar/tools/: CMakeLists.txt
lidar/tools/cmake/: Eigen.cmake  GFlags.cmake  GTest.cmake
lidar/tools/scripts/: label_rawdata_parse_tool.py  merge_data_aug.py  split_data.py
lidar/tools/src/: CMakeLists.txt
lidar/tools/src/common/: example.cpp  example.h  label.h  random.h
lidar/tools/src/data_augmentation/: data_aug.cpp  flags.h
lidar/tools/src/data_augmentation/transform/: down_sample_transform.cpp  ground_filter_transform.cpp  move_transform.h  obstacle_transform.cpp  reflect_x_transform.cpp  reflect_x_transform.h  reflect_y_transform.h  rotate_z_transform.h  scale_transform.cpp  scale_transform.h  transform.cpp  up_sample_transform.cpp  up_sample_transform.h
lidar/tools/src/models/cnnseg/: CMakeLists.txt  cnnseg_feat_gen.cpp
lidar/tools/src/visualization/: seg_visualize.cpp  seg_viz_flags.h  track_visualize.cpp  track_viz_flags.h  visualize.cpp
